--- a/hooks/Rakefile
+++ b/hooks/Rakefile
@@ -4,6 +4,7 @@ desc "install dot files"
 task :install do
 	install_oh_my_zsh
 	switch_to_zsh
+  install_vundle
 end
 
 
@@ -36,4 +37,11 @@ def install_oh_my_zsh
     else
       puts "skipping oh-my-zsh, you will need to change ~/.zshrc"
     end
+end
+
+def install_vundle  
+  if File.exist?(File.join(ENV['HOME'], ".vim/bundle/Vundle.vim"))
+      system %Q{git clone https://github.com/gmarik/Vundle.vim.git ~/.vim/bundle/Vundle.vim}
+      system %Q{vim -u $HOME/.vimrc.bundles +BundleInstall +qa}
+  end
 end
