fixed some errors in rake file

--- a/hooks/Rakefile
+++ b/hooks/Rakefile
@@ -42,14 +42,13 @@ def install_oh_my_zsh
 end
 
 def install_vundle  
-  if File.exist?(File.join(ENV['HOME'], ".vim/bundle/Vundle.vim"))
+      puts "install Vundle"
       system %Q{git clone https://github.com/gmarik/Vundle.vim.git ~/.vim/bundle/Vundle.vim}
       system %Q{vim -u $HOME/.vimrc.bundles +BundleInstall +qa}
-  end
 end
 
 def start_up
-  system %Q{\curl -sSL https://get.rvm.io | bash -s stable --ruby} # rvm
+  system %Q{ \\curl -sSL https://get.rvm.io | bash -s stable --ruby} # rvm
   system %Q{ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"} # hombrew
   system %Q{brew tap thoughtbot/formulae}
   system %Q{brew install rcm}
