updated tmux conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,2 +1,16 @@
+# Reload tmux config
+bind r source-file ~/.tmux.conf
+
 # improve colors
 set -g default-terminal 'screen-256color'
+
+# Set prefix key to C-a instead of Ctrl-b
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
+# switch panes using Alt-arrow without prefix using (alt + arrow_key)
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
