--- a/tmux.conf
+++ b/tmux.conf
@@ -16,10 +16,10 @@ bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
 
-set-option -g mouse-select-pane on
-set-option -g mouse-select-window on
-set-window-option -g mode-mouse on
-
+#setw -g mode-mouse on
+#set-option -g mouse-select-pane on
+#set-option -g mouse-select-window on
+#set-window-option -g mode-mouse on
 
 # Start numbering at 1
 set -g base-index 1
